--- a/assets/Style/style.css
+++ b/assets/Style/style.css
@@ -7,7 +7,7 @@ body{
     display: center;
 }
 .fondo{
-    background-image: url("/assets/img/fondo2.png");
+    background-image: url("/assets/img/fondo2.PNG");
     background-repeat: no-repeat;
     background-position: center;
     opacity: 1;
