--- a/assets/Style/style.css
+++ b/assets/Style/style.css
@@ -182,3 +182,6 @@ input[type="text"]:focus {
     font: 1.5vw Muli;
     font-weight: 900;
 }
+[draggable=true]{
+    -khtml-user-drag: element;
+}
