--- a/assets/Style/style.css
+++ b/assets/Style/style.css
@@ -184,4 +184,7 @@ input[type="text"]:focus {
 }
 [draggable=true]{
     -khtml-user-drag: element;
+    -webkit-user-drag: element;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
 }
